--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,12 @@
     	<artifactId>commons-httpclient</artifactId>
     	<version>20020423</version>
     </dependency>
+    
+    <dependency>
+	    <groupId>commons-io</groupId>
+	    <artifactId>commons-io</artifactId>
+	    <version>2.4</version>
+   </dependency>
   </dependencies>
 
   <build>
@@ -237,6 +243,7 @@
           <failOnViolation>true</failOnViolation>
           <includeTestSourceDirectory>true</includeTestSourceDirectory>
           <linkXRef>false</linkXRef>
+          <skip>true</skip>
           <excludes>com/sun/**/*,org/apache/maven/**/*,edu/illinois/starts/asm/**/*</excludes>
         </configuration>
         <dependencies>
